Fixed z-index bug

--- a/devmap/src/Devmap/Devmap.css
+++ b/devmap/src/Devmap/Devmap.css
@@ -7,7 +7,7 @@
   min-height: 93vh;
   height: 100%;
   background: rgb(56, 56, 56);
-  z-index: -1;
+  z-index: 0;
   justify-content: center;
   align-items: center;
 }
